--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Mekari Dev Center
+title: Developer Center
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Biarkan Mekari mengurus proses absensi, payroll, pembukuan, sampai ke perpajakan 
