--- a/_config.yml
+++ b/_config.yml
@@ -81,3 +81,5 @@ search:
   # Enable or disable the search button that appears in the bottom right corner of every page
   # Supports true or false (default)
   button: false
+
+logo: "/assets/images/logo-mekari-developers.png"
