Use custom just-the-docs theme that support jekyll 4.2.0

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ github_username:  mekari-engineering
 
 # Build settings
 theme: just-the-docs
-remote_theme: pmarsceill/just-the-docs
+remote_theme: fians/just-the-docs
 plugins:
   - jekyll-feed
 
